fix: resolve code duplication and memory leaks in PDF dialogs