@@ -199,9 +199,7 @@ public class MainController {
         }
         // Listener của Slider và ColorPicker (Giữ nguyên)
         if (strokeWidthSlider != null) {
-            strokeWidthSlider.valueProperty().addListener((obs, oldVal, newVal) -> {
-                updateDrawingStyleForAllPages();
-            });
+            strokeWidthSlider.valueProperty().addListener((obs, oldVal, newVal) -> updateDrawingStyleForAllPages());
         }
 
         uiStateManager.updateUIState(false);
@@ -509,119 +507,22 @@ private void handleDeletePage() {
 
                 logger.info("Successfully deleted page {} and reloaded document", current + 1);
 
-            } catch (Exception e) {
-                logger.error("Error deleting page {}", current + 1, e);
-                uiStateManager.showError("Delete Page Error", "Could not delete the page: " + e.getMessage());
+            } catch (Exception ex) {
+                logger.error("Error deleting page {}", current + 1, ex);
+                uiStateManager.showError("Delete Page Error", "Could not delete the page: " + ex.getMessage());
 
-        Alert confirm = new Alert(Alert.AlertType.CONFIRMATION);
-        confirm.setTitle("Delete Page");
-        confirm.setHeaderText("Delete current page?");
-        confirm.setContentText("This will remove page " + (current + 1) + " from the document.");
-        confirm.getButtonTypes().setAll(ButtonType.OK, ButtonType.CANCEL);
-        DialogPane confirmDialogPane = confirm.getDialogPane();
-        if (themeManager != null) {
-            themeManager.applyThemeToScene(confirmDialogPane.getScene());
-        }
-        confirm.showAndWait().ifPresent(result -> {
-            if (result == ButtonType.OK) {
+                // Recovery: thử mở lại file gốc
                 try {
-                    // 1. Lưu thông tin cần thiết
-                    File currentFile = currentDocument.getFile();
-                    double oldZoom = zoomManager.getCurrentZoom();
-
-                    // 2. Xóa trang TRƯỚC KHI save
-                    fileManager.deletePages(currentDocument, java.util.List.of(current));
-
-                    // 3. Save document (sử dụng save thông thường, không dùng incremental)
-                    pdfService.save(currentDocument);
-
-                    // 4. CRITICAL: Đóng document cũ ĐỂ giải phóng file lock
-                    pdfService.closePDF(currentDocument);
-
-                    // 5. Clear TOÀN BỘ state
-                    contentPane.getChildren().clear();
-                    pagesContainer = null;
-                    loadingPages.clear();
-
-                    // 6. Clear cache và hủy tất cả render đang chờ
-                    pageRenderer.clearCache();
-                    pageRenderer.cancelAllPendingRenders();
-
-                    // 7. Tạo MỚI PageRenderer và ScrollHandler
-                    pageRenderer = new PageRenderer(pdfService, renderExecutor);
-                    scrollHandler = new ScrollHandler(pageRenderer, scrollPane);
-
-                    // 8. Mở LẠI file (để PDFBox load lại cấu trúc mới)
-                    currentDocument = fileManager.openFile(currentFile);
-                    if (currentDocument == null) {
-                        uiStateManager.showError("Error", "Could not reopen the file after deletion.");
-                        return;
+                    if (currentDocument != null && currentDocument.getFile() != null) {
+                        openPDFFile(currentDocument.getFile());
                     }
-
-                    // 9. Tính current page mới
-                    int newTotal = currentDocument.getTotalPages();
-                    int newCurrentPage = (current >= newTotal) ? Math.max(0, newTotal - 1) : current;
-                    currentDocument.setCurrentPage(newCurrentPage);
-                    currentDocument.setZoomLevel(oldZoom);
-
-                    // 10. Cập nhật renderer với document mới
-                    pageRenderer.setDocument(currentDocument, oldZoom);
-                    zoomManager.setDocument(currentDocument);
-                    zoomManager.setCurrentZoom(oldZoom);
-
-                    // 11. Tạo lại RenderingManager
-                    renderingManager = new RenderingManager(pdfService, pageRenderer, scrollHandler, zoomManager);
-                    renderingManager.setDocument(currentDocument);
-                    renderingManager.setUIComponents(null, scrollPane, contentPane);
-
-                    // 12. CRITICAL: Set document cho ScrollHandler SAU KHI render
-                    // (chờ pagesContainer được tạo)
-                    renderingManager.renderAllPages();
-                    pagesContainer = renderingManager.getPagesContainer();
-
-                    // 13. Set document cho ScrollHandler với pagesContainer HỢP LỆ
-                    scrollHandler.setDocument(currentDocument, pagesContainer);
-
-                    // 14. Cập nhật UI
-                    pageInfoManager.updatePageInfo(currentDocument);
-
-                    // 15. Scroll về đầu và trigger render - CHỈ dùng 1 lớp runLater
-                    Platform.runLater(() -> {
-                        // Reset scroll position
-                        scrollPane.setVvalue(0);
-                        currentDocument.setCurrentPage(0);
-
-                        // Clear loading pages trước khi trigger scroll
-                        loadingPages.clear();
-
-                        // Trigger scroll handler để load các trang cần thiết
-                        scrollHandler.handleScroll();
-
-                        // Update UI
-                        pageInfoManager.updatePageInfo(currentDocument);
-                        uiStateManager.updateStatus(
-                                "Deleted page " + (current + 1) + ". Total pages: " + newTotal
-                        );
-                    });
-
-                    logger.info("Successfully deleted page {} and reloaded document", current + 1);
-
-                } catch (Exception e) {
-                    logger.error("Error deleting page {}", current + 1, e);
-                    uiStateManager.showError("Delete Page Error", "Could not delete the page: " + e.getMessage());
-
-                    // Recovery: thử mở lại file gốc
-                    try {
-                        if (currentDocument != null && currentDocument.getFile() != null) {
-                            openPDFFile(currentDocument.getFile());
-                        }
-                    } catch (Exception ex) {
-                        logger.error("Failed to recover after delete error", ex);
-                    }
+                } catch (Exception recovery) {
+                    logger.error("Failed to recover after delete error", recovery);
                 }
             }
-        });
-    }
+        }
+    });
+}
     // ==================== Zoom Operations ====================
 
     @FXML
@@ -999,7 +900,7 @@ private void handleDeletePage() {
         if (pagesContainer == null) return;
         pagesContainer.getChildren().forEach(node -> {
             if (node instanceof javafx.scene.layout.VBox pageBox) {
-                if (!pageBox.getChildren().isEmpty() && pageBox.getChildren().get(0) instanceof javafx.scene.layout.StackPane stack) {
+                if (!pageBox.getChildren().isEmpty() && pageBox.getChildren().getFirst() instanceof javafx.scene.layout.StackPane stack) {
                     stack.getChildren().stream()
                             .filter(child -> child instanceof AnnotationLayer)
                             .map(child -> (AnnotationLayer) child)
@@ -1075,7 +976,7 @@ private void handleDeletePage() {
     private void processAllAnnotationLayers(java.util.function.Consumer<AnnotationLayer> action) {
         pagesContainer.getChildren().forEach(node -> {
             if (node instanceof VBox pageBox && !pageBox.getChildren().isEmpty()) {
-                if (pageBox.getChildren().get(0) instanceof StackPane stack) {
+                if (pageBox.getChildren().getFirst() instanceof StackPane stack) {
                     stack.getChildren().stream()
                             .filter(child -> child instanceof AnnotationLayer)
                             .map(child -> (AnnotationLayer) child)
